# ai-gym-coach

./: data.db  main.py  pyproject.toml  test.py
.streamlit/: config.toml  secrets.toml
services/auth/: login_wall.py
services/coaching/: voice_pipeline.py
services/config/: workout_config.py
services/persistence/: exercise_repository.py
services/ui/: style_loader.py
services/vision/: exercise_video_processor.py
tutorial/: .env  main.py
