[project]
name = "ai-gym-coach-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.4.0",
    "gtts>=2.5.4",
    "mediapipe>=0.10.35",
    "opencv-python>=4.13.0.92",
    "streamlit>=1.57.0",
    "streamlit-webrtc>=0.72.1",
]
